<resources>
    <string name="app_name">UI_Project</string>
    <string name="title_first_slide">Plan meals</string>
    <string name="title_second_slide">View recipes based on category</string>
    <string name="title_third_slide">Explore new dishes</string>
    <string name="title_fourth_slide">Improve cooking skills</string>
    <string name="description_first_slide">Plan yours shopping list based on what you plan to cook</string>
    <string name="description_second_slide">Find recipe inspiration for breakfast, lunch, dinner or vegan/vegetarian diets</string>
    <string name="description_third_slide">Expand your recipe horizons</string>
    <string name="description_fourth_slide">Become the chef you want to be</string>
    <string name="skip_btn">Skip</string>
    <string name="continue_btn">Continue</string>
    <string name="done_btn">Done</string>
    <string name="submit_btn">Confirm</string>
    <string name="breakfast">Breakfast Recipes</string>
    <string name="lunch">Lunch Recipes</string>
    <string name="dinner">Dinner Recipes</string>
    <string name="vegan">Vegan Recipes</string>
    <string name="shopping">Shopping List</string>
    <string name="toast">Egg, Smoked Salmon and Avocado Toast</string>
    <string name="blueberry">Breakfast Doughnuts with Blueberry Jam</string>
    <string name="apple">Caramel Apple French Toast Casserole</string>
    <string name="chewy">Super Toasted Granola with Chewy Fruit</string>
    <string name="salad">Mediterranean Grilled Chicken Salad</string>
    <string name="wrap">Lemon Chicken Wraps with Tomatoes</string>
    <string name="pasta">Coriander Pesto Penne with Orange</string>
    <string name="soup">Homemade Vegetable Soup with Turkey</string>
    <string name="noodles">Stir-fried Egg Noodles with Shredded Chicken</string>
    <string name="salmon">Teriyaki salmon with green beans and rice</string>
    <string name="pasta_bake">Gooey Cheese and Chicken Pasta Bake</string>
    <string name="creamy">Creamy Stew with Smashed Mini Potatoes</string>
    <string name="tomato">Italian Roast Tomato and Crispy Bread Soup</string>
    <string name="squash">Baked squash with Rice and Onion</string>
    <string name="coconut">Pumpkin, Chickpea and Coconut Curry</string>
    <string name="cauliflower">Greek-inspired Cauliflower Stew</string>
    <string name="nav_home">Home</string>
    <string name="nav_shopping">Shopping List</string>
    <string name="nav_login">Login</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_register">Register</string>
    <string name="sort_list">Alphabetical Sort</string>
    <string name="add_item_list">Add Item</string>
    <string name="clear_item_list">Clear List</string>
    <string name="title">cookbook</string>
    <string name="slogan">Meal Planner</string>
    <string name="title_activity_shopping__list">Shopping_List</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="ingr_tomato_soup">2 kg ripe tomatoes\n2 red onions, olive oil\n1 litre organic vegetable stock\n1 pinch of dried oregano\na sprigs of fresh basil\nred wine vinegar\nextra virgin olive oil\n1 x 280g ciabatta loaf</string>
    <string name="dir_tomato_soup">- Preheat the oven to 200°C/400°F/gas 6.\n- Halve the tomatoes and place cut-side up in a large roasting tray.\n- Break the garlic bulb into cloves.\n- Peel and slice the onions into 3cm wedges, then scatter both into the tray.
        \n- Sprinkle with oregano, season with sea salt and black pepper, then drizzle with oil.\n- Pour in the stock, then roughly chop and add the basil stalks with most of the leaves.\n- Cut the ciabatta loaf in half and tear one half into the soup.\nBring to the boil, then simmer for 10 minutes.
        \n- Meanwhile, put a griddle pan on a high heat.\n- Slice the remaining ciabatta and griddle until lightly charred on both sides.</string>
    <string name="ingr_salad">- 2 boneless skinless chicken breasts (about 1 1/4 pounds)\n- 1 tsp. ground coriander\n- 1 tsp. dried oregano\n- 5 tbsp. extra-virgin olive oil\n- 4 tbsp. red wine vinegar\n- 1 tbsp. freshly chopped parsley
        \n- 3 Persian cucumbers, thinly sliced\n- 1 c. grape or cherry tomatoes, halved\n- 2 avocados, sliced\n- 4 oz. feta, crumbled\n- 1/2 c. pitted kalamata olives, halved</string>
    <string name="dir_salad">- Heat grill to medium-high. Season chicken with coriander, oregano, salt, and pepper. Grill, covered, turning halfway through, until golden and no longer pink, 18 to 22 minutes. Let rest 5 minutes, then slice.\n- Meanwhile, make dressing. Whisk olive oil, red wine vinegar, and parsley in a small bowl and season with salt and pepper.
        \n- Divide lettuce, cucumbers, tomatoes, avocado, feta, and olives among four serving bowls. Top with sliced chicken, then drizzle with dressing.</string>
    <string name="ingr_cauliflower">- 1 lemon\n- olive oil\n- 1 bulb of garlic\n- 2 red onions\n- 10 black olives\n- 300 g new potatoes\n- ½ a bunch of fresh oregano , (15g)\n- 10 large ripe plum tomatoes
        \n- 1 head of cauliflower , ideally with leaves (800g)\n- 200 g fresh or frozen peas , or broad beans</string>
    <string name="dir_cauliflower">- Preheat the oven to 200ºC/400ºF/gas 6. Use a speed-peeler to strip the lemon zest into a large casserole pan on a medium heat, then add 2 tablespoons of oil and the garlic bulb. Peel and quarter the onions and separate into petals, destone the olives, and slice the potatoes 1cm-thick. Add to the pan, pick in the oregano leaves and cook for 5 minutes, or until just starting to soften and colour. Quarter and add the tomatoes, then season to taste with sea salt and black pepper.
        \n- Pour 500ml of water into the pan and bring to the boil, stirring well and scraping up any sticky bits from the bottom. Discard just the tatty outer leaves from the cauliflower, then cut a cross into the stalk and push it right down to the bottom of the pan. Drizzle with 1 tablespoon of oil, cover, then place in the oven for 1 hour, or until golden and caramelised, basting occasionally and removing the lid halfway through.
        \n- Remove the cauliflower to a serving platter and pick out the garlic bulb, then place the pan back over a medium heat on the hob, stir in the peas or broad beans, and simmer for 5 minutes. Carefully squeeze all the garlic out of the skins and stir back into the pan. Taste and tweak the seasoning, if needed, then pour over the cauliflower and finish with a good squeeze of lemon juice.</string>
    <string name="ingr_squash">- 1 butternut squash\n- olive oil\n- 1 red onion\n- 1 clove of garlic\n- 1 bunch of fresh sage , (30g)\n- 10 sun-dried tomatoes\n- 75 g vac-packed chestnuts\n- 75 g basmati rice\n- 75 g dried cranberries\n- 1 pinch of ground allspice</string>
    <string name="dir_squash">- Preheat the oven to 180°C/350°F/gas 4. Wash the squash, carefully cut it in half lengthways, then remove and reserve the seeds. Use a spoon to score and scoop some flesh out, making a gully for the stuffing all along the length of the squash. Finely chop the scooped-out flesh with the seeds and put into a frying pan on a medium heat with 2 tablespoons of oil.
        \n- Peel, finely chop and add the onion and garlic, stirring regularly while you pick the sage leaves and finely chop them with the sun-dried tomatoes and chestnuts. Stir into the pan with the rice, cranberries and allspice, add a good pinch of sea salt and black pepper and a swig of red wine, and mix well. Fry for 10 minutes, or until softened, stirring occasionally.
        \n- Pack the mixture tightly into the gully in the two squash halves, then press the halves firmly back together. Rub the skin of the squash with a little oil, salt and pepper, and if you’ve got them, pat on any extra herb leaves you have to hand. Place the squash in the centre of a double layer of tin foil, then tightly wrap it up. Bake for around 2 hours, or until soft and cooked through.</string>
    <string name="ingr_coconut">- 1 pumpkin , or squash\n- 4 cm piece of ginger\n- 4 shallots\n- 4 cloves of garlic\n- 1 fresh red chilli\n- 1 bunch fresh coriander\n- groundnut oil
        \n- 1 teaspoon mustard seeds\n- 20 curry leaves\n- 1 teaspoon turmeric\n- 1 x 400 g tin of chopped tomatoes\n- 2 x 400 g tins of light coconut milk\n- 2 x 400 g tins of chickpeas</string>
    <string name="dir_coconut">- Chop the pumpkin or squash into 3cm chunks and cut the ginger into matchsticks. Pick the coriander leaves and finely chop the stalks.
        \n- Pour a good lug of groundnut oil into a large saucepan and place on a high heat. Add the ginger, garlic, red chilli and shallots, then reduce to a medium heat. Cook until golden, stirring occasionally, then add the mustard seeds, curry leaves, and coriander stalks and fry until the curry leaves go crispy.
        \n- Add the turmeric, tomatoes and coconut milk. Bring to the boil, then add the pumpkin and chickpeas. Reduce to a low heat, cover with a lid and simmer for 45 minutes. Check occasionally and add a splash of water if it looks a bit dry.
        \n- When the time’s up, take the lid off and cook for a further 15 minutes or so until the sauce is lovely and thick.</string>
    <string name="ingr_wrap">- 1/4 c. plus 2 tbsp. extra-virgin olive oil, divided\n- Juice of 3 lemons, divided\n- 2 cloves garlic, minced\n- 1 tsp. Italian seasoning\n- Kosher salt\n- Freshly ground black pepper
        \n- 1 lb. boneless skinless chicken breasts\n- 1/2 c. plain Greek yogurt\n- 1/2 tsp. paprika\n- Hot sauce, to taste\n- Pita bread\n- Butterhead lettuce\n- Sliced tomatoes</string>
    <string name="dir_wrap">- Make marinade: In a small bowl, whisk together 1/4 cup oil, juice of 2 lemons, garlic, Italian seasoning, salt, and pepper. To a large ziploc bag, add chicken breasts and marinade and toss to coat. Let marinate for at least 30 minutes and up to 4 hours.
        \n- In a large skillet over medium-high heat, heat remaining two tablespoons oil. Add chicken breasts and cook until golden and cooked through, about 8 minutes per side. Remove from pan and let rest a few minutes, then slice.
        \n- Make spicy yogurt sauce: In a small bowl, mix together yogurt, hot sauce, remaining lemon juice, and season with paprika and more salt.
        \n- Assemble wraps: To a piece of pita, add lettuce, tomato, chicken slices, and drizzle with spicy yogurt sauce. Wrap in a piece of parchment and serve.</string>
    <string name="ingr_pesto">- 100 g Cashew Nuts\n-0.5 - Lime juice only\n- 1 tsp Salt\n- 50 g Fresh Coriander including stalks
        \n- 2 small Orange peeled and cut into bite-sized pieces\n- 150 ml Sunflower Oil\n- 500 g Wholemeal Penne\n- 3 cloves Garlic</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Enter Full Name</string>
    <string name="email">Enter E-mail</string>
</resources>