<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home_icon" />

        <item
            android:id="@+id/nav_shopping_list"
            android:title="@string/nav_shopping"
            android:icon="@drawable/menu_list" />

    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/nav_login"
                    android:icon="@drawable/login_icon" />

                <item
                    android:id="@+id/nav_register"
                    android:title="@string/nav_register"
                    android:icon="@drawable/register_icon" />

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/nav_profile"
                    android:icon="@drawable/profile_icon" />

            </group>

        </menu>

    </item>

</menu>