<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".StartUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/cooking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nav_login"
                android:layout_weight="1"
                android:onClick="callLoginScreen"
                android:layout_marginRight="10dp"
                android:textColor="@color/darkGrey"
                android:background="@color/backgroundColor"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nav_register"
                android:onClick="callRegisterScreen"
                android:layout_weight="1"
                android:textColor="@color/darkGrey"
                android:layout_marginLeft="10dp"
                android:background="@color/backgroundColor"
                android:transitionName="transition_register"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>