<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="callStart"
            android:padding="5dp"
            android:src="@drawable/arrow_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/nav_login"
            android:textColor="@color/darkGrey"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_email_fld"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxStrokeColor="@color/darkGrey"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/darkGrey"
                app:hintTextColor="@color/darkGrey"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/darkGrey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/l_email_edit_fld"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arbutus_slab"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/darkGrey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_pass_fld"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:paddingTop="10dp"
                app:boxStrokeColor="@color/darkGrey"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/darkGrey"
                app:hintTextColor="@color/darkGrey"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/darkGrey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/l_pass_edit_fld"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arbutus_slab"
                    android:inputType="textPassword"
                    android:textColor="@color/darkGrey" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_login"
                android:background="@color/backgroundColor"
                android:textColor="@color/darkGrey"
                android:onClick="callHomeScreen"
                android:fontFamily="@font/arbutus_slab"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/create_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/create_account"
                android:layout_gravity="center"
                android:onClick="callCreateAccountScreen"
                android:fontFamily="@font/arbutus_slab"
                android:layout_marginTop="15dp"/>

        </LinearLayout>


    </LinearLayout>


</ScrollView>